- 首页、职位、职位搜索、职位详情、企业、企业详情、双选会、信息中心

--- a/static/iconfont.css
+++ b/static/iconfont.css
@@ -1,8 +1,8 @@
 @font-face {
-    font-family: "cr-icon"; /* Project id 4121636 */
-    src: url('font/iconfont.woff2?t=1686713349649') format('woff2'),
-    url('font/iconfont.woff?t=1686713349649') format('woff'),
-    url('font/iconfont.ttf?t=1686713349649') format('truetype');
+    font-family: 'cr-icon';
+    src: url('font/iconfont.woff2?t=1686888610608') format('woff2'),
+    url('font/iconfont.woff?t=1686888610608') format('woff'),
+    url('font/iconfont.ttf?t=1686888610608') format('truetype');
 }
 
 .cr-icon {
@@ -11,6 +11,14 @@
     font-style: normal;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+}
+
+.cr-icon-datetime:before {
+    content: "\e612";
+}
+
+.cr-icon-company:before {
+    content: "\e661";
 }
 
 .cr-icon-phone:before {
