--- a/common/style/base.scss
+++ b/common/style/base.scss
@@ -8,37 +8,73 @@ $cr-font-color-paragraph: #666;
 $cr-font-color-grey: #999999;
 $cr-font-color-highlight: #2b85e4;
 $cr-font-color-price: #ff5200;
+.bg-white {
+  background-color: white;
+}
+
 .font-title {
   font-size: $cr-font-size-lg;
   color: $cr-font-color-base;
   font-weight: bold;
 }
+
 .font-title-light {
   font-size: $cr-font-size-lg;
   color: $cr-font-color-highlight;
   font-weight: bold;
 }
+
+.font-title-grey {
+  font-size: $cr-font-size-lg;
+  color: $cr-font-color-grey;
+  font-weight: bold;
+}
+
 .font-desc {
   font-size: $cr-font-size-sm;
   color: $cr-font-color-grey;
 }
+
 .font-mini {
   font-size: $cr-font-size-sm-s;
   color: $cr-font-color-grey;
 }
+.font-mini-white {
+  font-size: $cr-font-size-sm-s;
+  color: #FFFFFF;
+}
+
 .font-desc-light {
   font-size: $cr-font-size-sm;
   color: $cr-font-color-highlight;
 }
+
 .font-base {
-  font-size: $cr-font-size-sm;
+  font-size: $cr-font-size-base;
   color: $cr-font-color-base;
 }
+
+.font-base-light {
+  font-size: $cr-font-size-base;
+  color: $cr-font-color-highlight;
+  font-weight: bold;
+}
+
+.font-base-white {
+  font-size: $cr-font-size-base;
+  color: #ffffff;
+}
+.font-base-grey {
+  font-size: $cr-font-size-base;
+  color: $cr-font-color-grey;
+}
+
 .font-paragraph {
   font-size: $cr-font-size-base;
   line-height: 40rpx;
   color: $cr-font-color-paragraph;
 }
+
 .font-money {
   font-size: $cr-font-size-lg;
   font-weight: bold;
@@ -48,42 +84,83 @@ $cr-font-color-price: #ff5200;
 .p-20 {
   padding: 20rpx;
 }
+
 .pt-20 {
   padding-top: 20rpx;
 }
+
 .pr-20 {
   padding-right: 20rpx;
 }
+
 .pb-20 {
   padding-bottom: 20rpx;
 }
+.ptb-20 {
+  padding-top: 20rpx;
+  padding-bottom: 20rpx;
+}
+
 .pl-20 {
   padding-left: 20rpx;
 }
+
 .p-30 {
   padding: 30rpx;
+}
+
+.ml-10 {
+  margin-left: 10px;
 }
 
 .mt-20 {
   margin-top: 20rpx;
 }
+
 .mr-20 {
   margin-right: 20rpx;
 }
+
 .mb-20 {
   margin-bottom: 20rpx;
 }
+
 .ml-20 {
   margin-left: 20rpx;
 }
+
 .mr-20 {
   margin-right: 20rpx;
 }
+
 .mt-10 {
   margin-top: 10rpx;
 }
+
 @mixin center-wrap() {
   display: flex;
   flex-wrap: wrap;
   align-items: center;
+}
+
+.cr-fixed-bottom {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: 100;
+  height: 120rpx;
+  padding: 30rpx;
+  box-sizing: border-box;
+  background-color: #fff;
+  box-shadow: 0 1rpx 5rpx #999999;
+  display: flex;
+  align-items: center;
+}
+.margin-fixed-bottom {
+  margin-bottom: 120rpx;
+}
+
+.cr-flex-1 {
+  flex: 1;
 }
