- 登录、用户中心、重构代码

--- a/static/iconfont.css
+++ b/static/iconfont.css
@@ -1,63 +1,77 @@
 @font-face {
-    font-family: 'cr-icon';
-    src: url('font/iconfont.woff2?t=1686888610608') format('woff2'),
-    url('font/iconfont.woff?t=1686888610608') format('woff'),
-    url('font/iconfont.ttf?t=1686888610608') format('truetype');
+  font-family: 'cr-icon'; /* Project id 4121636 */
+  src: url('font/iconfont.woff2?t=1687163484628') format('woff2'),
+    url('font/iconfont.woff?t=1687163484628') format('woff'),
+    url('font/iconfont.ttf?t=1687163484628') format('truetype');
 }
 
 .cr-icon {
-    font-family: "cr-icon", serif !important;
-    font-size: 16px;
-    font-style: normal;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
+  font-family: 'cr-icon', serif !important;
+  font-size: 16px;
+  font-style: normal;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+.cr-icon-preference:before {
+  content: '\e605';
+}
+
+.cr-icon-resume-copy:before {
+  content: '\e631';
+}
+
+.cr-icon-termsOfService:before {
+  content: '\e68a';
+}
+
+.cr-icon-resume:before {
+  content: '\e662';
 }
 
 .cr-icon-datetime:before {
-    content: "\e612";
+  content: '\e612';
 }
 
 .cr-icon-company:before {
-    content: "\e661";
+  content: '\e661';
 }
 
 .cr-icon-phone:before {
-    content: "\e600";
+  content: '\e600';
 }
 
 .cr-icon-edit:before {
-    content: "\e621";
+  content: '\e621';
 }
 
 .cr-icon-delete:before {
-    content: "\e68e";
+  content: '\e68e';
 }
 
 .cr-icon-workExperience:before {
-    content: "\e61a";
+  content: '\e61a';
 }
 
 .cr-icon-bianji:before {
-    content: "\e67f";
+  content: '\e67f';
 }
 
 .cr-icon-renshutongji:before {
-    content: "\e623";
+  content: '\e623';
 }
 
-.cr-icon-fankuixinxi:before {
-    content: "\e614";
+.cr-icon-feedback:before {
+  content: '\e614';
 }
 
 .cr-icon-educationLevel:before {
-    content: "\e611";
+  content: '\e611';
 }
 
 .cr-icon-navigation:before {
-    content: "\e60c";
+  content: '\e60c';
 }
 
-.cr-icon-yinsibaohu:before {
-    content: "\e99b";
+.cr-icon-security:before {
+  content: '\e99b';
 }
-
