--- a/common/style/base.scss
+++ b/common/style/base.scss
@@ -17,6 +17,12 @@ $cr-font-color-price: #ff5200;
   color: $cr-font-color-base;
   font-weight: bold;
 }
+.font-title-white {
+  font-size: $cr-font-size-lg;
+  color: #FFFFFF;
+  font-weight: bold;
+}
+
 
 .font-title-light {
   font-size: $cr-font-size-lg;
@@ -100,6 +106,10 @@ $cr-font-color-price: #ff5200;
   padding-top: 20rpx;
   padding-bottom: 20rpx;
 }
+.ptb-10 {
+  padding-top: 10rpx;
+  padding-bottom: 10rpx;
+}
 
 .pl-20 {
   padding-left: 20rpx;
@@ -108,6 +118,11 @@ $cr-font-color-price: #ff5200;
 .p-30 {
   padding: 30rpx;
 }
+.plr-30 {
+  padding-left: 30rpx;
+  padding-right: 30rpx;
+}
+
 
 .ml-10 {
   margin-left: 10px;
