-  面试模块，职位列表样式修改

--- a/common/style/base.scss
+++ b/common/style/base.scss
@@ -122,6 +122,9 @@ $cr-font-color-price: #ff5200;
 .p-30 {
   padding: 30rpx;
 }
+.pt-30 {
+  padding-top: 30rpx;
+}
 .plr-30 {
   padding-left: 30rpx;
   padding-right: 30rpx;
